2011-01-03  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c: Improved readability of the code by using
	  symbolic constants and additional comments. Also eliminated
	  warnings about value-less "return"s and unused variables (bug
	  #599, #600, #601). Thanks to Christopher Yeleighton (giecrilj at
	  stegny dot 2a dot pl).

2010-12-15  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented special entities for inserting job parameters,
	  like "&job;", "&user;", "&host;", "&title;", "&options;", ...

2010-12-13  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in: Allow generating a printer XML files also
	  from more than one PPD file for the same printer with only one call
	  of the foomatic-ppd-to-xml script. Feature request from George Liu
	  from Ricoh (bug #565).

	* lib/Foomatic/DB.pm: Allow loading arbitrary printer and driver
	  XML files into the Perl data structure, not only XML files which
	  are in the current XML database.
	  When generating Perl data from a PPD do not add a new paragraph to
	  the printer comments if the added comment is empty.

2010-12-09  Till Kamppeter <till.kamppeter@gmail.com>

	* Makefile.in: Rearranged gcc command line so that linking works
	  with gcc 4.5.x (Ubuntu bug #687973).

2010-12-08  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Sort the driver lists in printer XML files
	  alphabetically (case-insensitive) when generating XML files from
	  a Perl data structure, so that the files are identical to the
	  MySQL -> XML exporter on the OpenPrinting web servers. This
	  prevents automatic BZR commits into foomatic-db or
	  foomatic-db-nonfree which contain nothing more than driver list
	  reordering.

	* README, lib/Foomatic/DB.pm, ppdtoxml: Use always a single space
	  before the closing "/>" of body-less tags. This way the XML style
	  of files committed to the BZR repositories of foomatic-db and