@@ -1,10 +1,15 @@
 2011-01-03  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* foomatic-perl-data.c: Eliminated compiler warnings by consistent
+	  use of "const" with xmlChar and char variables (bug #604). Thanks
+	  to Christopher Yeleighton (giecrilj at stegny dot 2a dot pl) for
+	  the patch.
+
 	* foomatic-combo-xml.c: Improved readability of the code by using
 	  symbolic constants and additional comments. Also eliminated
 	  warnings about value-less "return"s and unused variables (bug
 	  #599, #600, #601). Thanks to Christopher Yeleighton (giecrilj at
-	  stegny dot 2a dot pl).
+	  stegny dot 2a dot pl) for the patch.
 
 2010-12-15  Till Kamppeter <till.kamppeter@gmail.com>
 
